# velocity

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Cross.toml  Dockerfile  Makefile  NOTICE  README.md  clippy.toml  deny.toml  docker-bake.hcl  docker-compose.yml  rustfmt.toml
.cargo/: audit.toml  config.toml
Formula/: velocity.rb
crates/velocity-api/: Cargo.toml
crates/velocity-api/src/: archive_handlers.rs  audit.rs  audit_query.rs  auth.rs  auth_handlers.rs  auth_informer.rs  cdc.rs  config.rs  dsl.rs  error.rs  event_log.rs  field_filter.rs  handlers.rs  health.rs  idempotency.rs  identity.rs  informer.rs  lib.rs  main.rs  masking.rs  metrics.rs  metrics_middleware.rs  platform_handlers.rs  policy.rs  query.rs  rbac.rs  registry.rs  router.rs  row_filter.rs  session.rs  startup.rs  state.rs  tiering.rs  time_machine.rs  typesense.rs  validate.rs
crates/velocity-api/src/auth/: api_key.rs  claims.rs  middleware.rs  oidc.rs  registry.rs  revocation.rs  session.rs
crates/velocity-api/src/tiering/: cold_stub.rs  event_reader.rs  postgres_reader.rs  router.rs  warm_reader.rs
crates/velocity-api/tests/: abac_cel_timeout.rs  abac_policy_routes.rs  api_key_routes.rs  audit_fields_changed_integration.rs  audit_query_integration.rs  audit_read_coverage_integration.rs  audit_redaction_integration.rs  composite_routes.rs  denial_audit_integration.rs  field_filter_routes.rs  http_idempotency.rs  jwks_cache.rs  jwt_middleware.rs  oidc_callback.rs  oidc_middleware.rs  phase1_crud.rs  phase2a_e2e.rs  phase2b_field_filter_e2e.rs  phase2b_rls_direct.rs  phase2b_row_filter_e2e.rs  phase3_event_log_e2e.rs  phase3_time_machine_filters_e2e.rs  phase4_warm_tier_e2e.rs  phase5a_query_dsl_e2e.rs  phase5b_fts_e2e.rs  phase5c_typesense_cdc_e2e.rs  rbac_routes.rs  revocation_middleware.rs  row_filter_routes.rs  startup_role_gate.rs
crates/velocity-archive-worker/: Cargo.toml
crates/velocity-archive-worker/src/: lib.rs  main.rs  s3_destination.rs  worker.rs
crates/velocity-cli/: Cargo.toml
crates/velocity-cli/src/: archive_cmd.rs  audit.rs  auth_cmd.rs  client.rs  config.rs  confirm.rs  context_cmd.rs  drift.rs  history_cmd.rs  kube_cmd.rs  kube_helpers.rs  logs_cmd.rs  main.rs  obs_cmd.rs  output.rs  reconcile.rs  record_cmd.rs  status.rs  version_cmd.rs
crates/velocity-data-api/: Cargo.toml
crates/velocity-data-api/src/: archive_handlers.rs  dsl.rs  event_log.rs  handlers.rs  idempotency.rs  lib.rs  main.rs  router.rs  session.rs  startup.rs  state.rs  time_machine.rs
crates/velocity-data-api/src/tiering/: event_reader.rs  postgres_reader.rs
crates/velocity-data-api/tests/: abac_policy_routes.rs  audit_fields_changed_integration.rs  audit_read_coverage_integration.rs  field_filter_routes.rs  http_idempotency.rs  jwt_middleware.rs  phase1_crud.rs  phase2a_e2e.rs  phase2b_field_filter_e2e.rs  phase2b_row_filter_e2e.rs  phase3_event_log_e2e.rs  phase3_time_machine_filters_e2e.rs  phase4_warm_tier_e2e.rs  phase5a_query_dsl_e2e.rs  phase5b_fts_e2e.rs  rbac_routes.rs  row_filter_routes.rs
crates/velocity-log-collector/: Cargo.toml
crates/velocity-log-collector/src/: ingest.rs  lib.rs  main.rs  parser.rs  shipper.rs  tail.rs
crates/velocity-log-collector/tests/: end_to_end.rs
crates/velocity-log-processor/: Cargo.toml
crates/velocity-log-processor/src/: config.rs  destination.rs  enrich.rs  lib.rs  main.rs  policy.rs  rules.rs  server.rs
crates/velocity-operator/: Cargo.toml
crates/velocity-operator/src/: anomaly.rs  config.rs  context.rs  controllers.rs  ddl_builder.rs  drift_sweep.rs  health.rs  lib.rs  log_policy.rs  main.rs  metrics.rs  migration_diff.rs  partition_manager.rs  provisioner.rs  reap_sweeper.rs  redis_notify.rs  search_rebuild.rs  slo_rules.rs  startup.rs  tiering.rs  workload.rs
crates/velocity-operator/src/controllers/: application.rs  archive_policy.rs  domain.rs  organisation.rs  purge_request.rs  role_binding.rs  schema_definition.rs
crates/velocity-operator/src/tiering/: exporter.rs  object_store_url.rs  orphan_recovery.rs  schema.rs
crates/velocity-operator/tests/: anomaly_integration.rs  partition_manager_integration.rs  provisioner_integration.rs  reap_sweeper_integration.rs  schema_provisioner_integration.rs  search_rebuild_select_integration.rs
crates/velocity-platform-api/: Cargo.toml
crates/velocity-platform-api/src/: audit_query.rs  lib.rs  main.rs  platform_handlers.rs  platform_objects.rs  router.rs  state.rs  static_files.rs
crates/velocity-platform-api/static/: README.md
crates/velocity-platform-api/tests/: audit_query_integration.rs
crates/velocity-search/: Cargo.toml
crates/velocity-search/src/: cdc.rs  lib.rs  main.rs  router.rs  search_handlers.rs  state.rs
crates/velocity-search/tests/: phase5c_typesense_cdc_e2e.rs
crates/velocity-types/: Cargo.toml
crates/velocity-types/src/: common.rs  crds.rs  fail_mode.rs  identity.rs  lib.rs  resolved.rs
crates/velocity-types/src/crds/: auth.rs  hierarchy.rs  policies.rs  purge.rs  schema.rs
crates/velocity-typesense/: Cargo.toml
crates/velocity-typesense/src/: lib.rs
crates/velocity-typesense/tests/: mock_server.rs
crates/velocity-warm-reader/: Cargo.toml
crates/velocity-warm-reader/src/: config.rs  datafusion_reader.rs  error.rs  http.rs  lib.rs  main.rs  object_layout.rs  startup.rs  types.rs
crates/velocity-warm-reader/tests/: end_to_end.rs
crates/velocity-webhook/: Cargo.toml
crates/velocity-webhook/src/: config.rs  handler.rs  lib.rs  main.rs  startup.rs  strategy_check.rs  validators.rs
crds/: apikey.yaml  application.yaml  archivepolicy.yaml  authstrategy.yaml  domain.yaml  logfilterpolicy.yaml  logroutingpolicy.yaml  organisation.yaml  purgerequest.yaml  rolebinding.yaml  schemadefinition.yaml
docs/: architecture.md  decisions.md  design.md  e2e-testing.md  oidc-setup.md  operations.md  phases.md
homebrew/: velocity.rb
migrations/: 0001_platform_schema.sql  0002_audit_insert.sql  0003_grants.sql  0004_event_log_reason.sql  0005_pending_typesense_reaps.sql  0006_anomaly_alerts.sql  0007_operator_delegation.sql
portal/: .gitignore  (+13 more)
(+182 files in other folders)
