[workspace]
resolver = "2"
members = [
    "crates/velocity-types",
    "crates/velocity-operator",
    "crates/velocity-api",
    "crates/velocity-webhook",
    "crates/velocity-cli",
    "crates/velocity-log-processor",
    "crates/velocity-log-collector",
    "crates/velocity-archive-worker",
    "crates/velocity-warm-reader",
    "crates/velocity-typesense",
]

[workspace.package]
version      = "0.1.3"
edition      = "2021"
rust-version = "1.95"
license      = "Apache-2.0"
authors      = ["Velocity Contributors"]
repository   = "https://github.com/kinarix/velocity"
homepage     = "https://velocity.kinarix.com"
publish      = false

[workspace.lints.rust]
unsafe_code               = "forbid"
unused_must_use           = "deny"
unreachable_pub           = "warn"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
unwrap_used     = "warn"
expect_used     = "warn"
panic           = "warn"
todo            = "warn"
dbg_macro       = "warn"
print_stdout    = "warn"
print_stderr    = "warn"
mod_module_files = "warn"

[workspace.dependencies]
# Async runtime + utilities
tokio          = { version = "1.40", features = ["full"] }
tokio-util     = "0.7"
futures        = "0.3"
async-trait    = "0.1"
pin-project    = "1"

# HTTP / web
axum           = { version = "0.8", features = ["macros"] }
tower          = "0.5"
tower-http     = { version = "0.6", features = ["trace", "cors", "limit", "request-id"] }
axum-server    = { version = "0.7", features = ["tls-rustls"] }
hyper          = "1"
reqwest        = { version = "0.13", default-features = false, features = ["json", "rustls"] }

# Kubernetes
kube           = { version = "3.1", default-features = false, features = ["client", "derive", "runtime", "rustls-tls"] }
k8s-openapi    = { version = "0.27", features = ["latest"] }
schemars       = { version = "1", features = ["chrono04", "uuid1"] }

# Database
sqlx           = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio-rustls", "macros", "chrono", "uuid", "json"] }

# Concurrency primitives
arc-swap       = "1.7"
dashmap        = "6"
parking_lot    = "0.12"

# Redis (revocation, idempotency, rate limit) — async via tokio-comp,
# connection-manager keeps the link healed without per-call reconnect cost.
redis          = { version = "1", default-features = false, features = ["tokio-comp", "connection-manager"] }

# Serialization
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
serde_yaml     = "0.9"

# Errors
anyhow         = "1"
thiserror      = "2"

# Filesystem paths (resolves ~/.velocity etc. without dragging in directories crate)
dirs           = "5"

# Observability
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.32"
opentelemetry       = "0.32"
opentelemetry_sdk   = { version = "0.32", features = ["rt-tokio"] }
opentelemetry-otlp  = { version = "0.32", features = ["grpc-tonic"] }
prometheus          = "0.14"

# Expression / data
cel-interpreter = "0.10"
jsonpath-rust   = "1"
json-patch      = "4"
regex           = "1"

# Crypto
sha2            = "0.10"
hex             = "0.4"
hmac            = "0.12"
jsonwebtoken    = { version = "10", default-features = false, features = ["aws_lc_rs", "use_pem"] }
rand            = "0.8"      # rsa 0.9 (current latest stable) requires rand 0.8 traits;
                              # bumping rand to 0.9/0.10 requires rsa 0.10-rc, skip until rsa GAs
argon2          = "0.5"
base64          = "0.22"
ipnet           = "2"

# CLI
clap            = { version = "4", features = ["derive", "env", "wrap_help"] }

# Time / IDs
chrono          = { version = "0.4", default-features = false, features = ["serde", "clock"] }
uuid            = { version = "1", features = ["v4", "v7", "serde"] }

# Warm-tier storage (Phase 4) — pure-Rust columnar IO. DataFusion is the
# query engine for the warm reader: it composes over arrow + parquet +
# object_store (same versions), gives us predicate pushdown via Parquet
# row-group statistics for free, and lets us bolt on SQL-over-warm later
# without rewriting the reader (ADR-004 revision 2026-05-18).
arrow           = "58"
parquet         = "58"
url             = "2"
# object_store: s3:// + file:// + gs:// behind one trait. AWS feature pulls in
# the S3 client; tests stay local via the file:// scheme.
object_store    = { version = "0.13", features = ["aws"] }
# DataFusion's version is kept lockstep with arrow/parquet — release 53.x
# tracks the arrow 58.x series. Don't bump one without the other.
#
# Features trimmed from defaults: warm-reader only does range scans
# (occurred_at), equality filters on string columns, and Parquet IO. The
# unused expression libs (crypto/encoding/regex/math/unicode/nested) cost
# ~30–40% of datafusion's compile time. Re-add the relevant feature if a
# future query needs e.g. regexp_match.
datafusion      = { version = "53", default-features = false, features = [
    "parquet",
    "datetime_expressions",
    "string_expressions",
    "recursive_protection",
    "compression",
] }
# Constant-time service-token comparison for the inter-service RPC pattern
# established in Phase 4 (CLAUDE.md §Inter-Service RPC).
subtle          = "2"

# Testing
testcontainers  = "0.27"

# Internal crates
velocity-types       = { path = "crates/velocity-types" }
velocity-operator    = { path = "crates/velocity-operator" }
velocity-warm-reader = { path = "crates/velocity-warm-reader" }
velocity-typesense   = { path = "crates/velocity-typesense" }

[profile.release]
lto             = "thin"
codegen-units   = 1
strip           = "symbols"
opt-level       = 3
debug           = false

[profile.release-with-debug]
inherits = "release"
debug    = true
strip    = "none"

[profile.dev]
opt-level = 0
# line-tables-only keeps file:line in backtraces while dropping the full
# DWARF type info that dominates link time. Cuts target/ debug size and
# `make test` link step substantially on a workspace this size. Switch
# back to `true` only if you need to drive a debugger through a crate.
debug     = "line-tables-only"

[profile.test]
opt-level = 1
