[package]
name        = "velocity-api"
description = "Axum REST API server serving Velocity schemas"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
homepage.workspace     = true
publish.workspace      = true

[[bin]]
name = "velocity-api"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
velocity-types     = { workspace = true }

tokio              = { workspace = true }
futures            = { workspace = true }

anyhow             = { workspace = true }
thiserror          = { workspace = true }

tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

axum               = { workspace = true }
tower              = { workspace = true }
tower-http         = { workspace = true }

kube               = { workspace = true }
k8s-openapi        = { workspace = true }

sqlx               = { workspace = true }

serde              = { workspace = true }
serde_json         = { workspace = true }

arc-swap           = { workspace = true }
dashmap            = { workspace = true }

# Pinned only to call CryptoProvider::install_default() at startup. kube-rs
# (via rustls-tls) pulls rustls 0.23 in but doesn't pick a provider for us.
rustls             = { version = "0.23", features = ["aws-lc-rs"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
