[package]
name        = "velocity-api"
description = "Axum REST API server serving Velocity schemas"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
homepage.workspace     = true
publish.workspace      = true

[[bin]]
name = "velocity-api"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
velocity-types     = { workspace = true }

tokio              = { workspace = true }
futures            = { workspace = true }

anyhow             = { workspace = true }
thiserror          = { workspace = true }

tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

axum               = { workspace = true }
tower              = { workspace = true }
tower-http         = { workspace = true }

kube               = { workspace = true }
k8s-openapi        = { workspace = true }

sqlx               = { workspace = true }

serde              = { workspace = true }
serde_json         = { workspace = true }

arc-swap           = { workspace = true }
dashmap            = { workspace = true }
parking_lot        = { workspace = true }
async-trait        = { workspace = true }
redis              = { workspace = true }

cel-interpreter    = { workspace = true }
regex              = { workspace = true }
uuid               = { workspace = true }
sha2               = { workspace = true }
hex                = { workspace = true }
hmac               = { workspace = true }
rand               = { workspace = true }
jsonwebtoken       = { workspace = true }
jsonpath-rust      = { workspace = true }
json-patch         = { workspace = true }
reqwest            = { workspace = true }
base64             = { workspace = true }
chrono             = { workspace = true }
ipnet              = { workspace = true }

# Pinned only to call CryptoProvider::install_default() at startup. kube-rs
# (via rustls-tls) pulls rustls 0.23 in but doesn't pick a provider for us.
rustls             = { version = "0.23", features = ["aws-lc-rs"] }

[dev-dependencies]
tokio                = { workspace = true, features = ["test-util", "macros"] }
velocity-operator    = { workspace = true }
velocity-warm-reader = { workspace = true }
uuid                 = { workspace = true }
tower                = { workspace = true, features = ["util"] }
http-body-util       = "0.1"
rsa                  = "0.9"
rand                 = { workspace = true }
serde_json           = { workspace = true }
# Phase 4 warm-tier e2e fixtures: write parquet directly, register a
# DataFusion SessionContext that mirrors warm-reader's own bring-up.
arrow                = { workspace = true }
parquet              = { workspace = true, features = ["async", "object_store"] }
object_store         = { workspace = true }
datafusion           = { workspace = true }
url                  = { workspace = true }
tempfile             = "3"
