[package]
name        = "velocity-archive-worker"
description = "Batch worker that archives records per ArchivePolicy"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
homepage.workspace     = true
publish.workspace      = true

[lib]
name = "velocity_archive_worker"
path = "src/lib.rs"

[[bin]]
name = "velocity-archive-worker"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
velocity-types     = { workspace = true }
tokio              = { workspace = true }
anyhow             = { workspace = true }
thiserror          = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx               = { workspace = true }
