[package]
name        = "velocity-archive-worker"
description = "Batch worker that archives records per ArchivePolicy"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
homepage.workspace     = true
publish.workspace      = true

[lib]
name = "velocity_archive_worker"
path = "src/lib.rs"

[[bin]]
name = "velocity-archive-worker"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
velocity-types     = { workspace = true }
tokio              = { workspace = true }
anyhow             = { workspace = true }
thiserror          = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx               = { workspace = true }
kube               = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
chrono             = { workspace = true }
uuid               = { workspace = true }
arrow              = { workspace = true }
parquet            = { workspace = true, features = ["async", "object_store"] }
object_store       = { workspace = true }
bytes              = "1"
# Pinned only to call CryptoProvider::install_default() at startup. sqlx
# (via runtime-tokio-rustls) and object_store/AWS clients pull rustls 0.23
# in but don't pick a provider for us — first TLS handshake panics otherwise.
rustls             = { version = "0.23", features = ["aws-lc-rs"] }
