[package]
name        = "velocity-cli"
description = "velocity — Velocity command-line interface"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
homepage.workspace     = true
publish.workspace      = true

[[bin]]
name = "velocity"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
velocity-types = { workspace = true }
clap           = { workspace = true }
tokio          = { workspace = true }
anyhow         = { workspace = true }
