[package]
name        = "velocity-cli"
description = "velocity — Velocity command-line interface"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
homepage.workspace     = true
publish.workspace      = true

[[bin]]
name = "velocity"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
velocity-types = { workspace = true }
clap           = { workspace = true }
tokio          = { workspace = true }
anyhow         = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
chrono         = { workspace = true }
sqlx           = { workspace = true }
kube           = { workspace = true }
k8s-openapi    = { workspace = true }
tracing        = { workspace = true }
tracing-subscriber = { workspace = true }
uuid           = { workspace = true }
serde_yaml     = { workspace = true }
# Pinned for kube-rs's rustls feature path (matches velocity-api's choice).
rustls         = { version = "0.23", features = ["aws-lc-rs"] }
