[package]
name        = "velocity-log-collector"
description = "DaemonSet that ships pod stdout to the log processor"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
homepage.workspace     = true
publish.workspace      = true

[[bin]]
name = "velocity-log-collector"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
velocity-types     = { workspace = true }
tokio              = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
