[package]
name        = "velocity-log-collector"
description = "DaemonSet that ships pod stdout to the log processor"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
homepage.workspace     = true
publish.workspace      = true

[lib]
name = "velocity_log_collector"
path = "src/lib.rs"

[[bin]]
name = "velocity-log-collector"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
velocity-types     = { workspace = true }
tokio              = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
reqwest            = { workspace = true }
chrono             = { workspace = true }

[dev-dependencies]
tokio       = { workspace = true, features = ["test-util", "macros"] }
tempfile    = "3"
axum        = { workspace = true }
