[package]
name        = "velocity-log-processor"
description = "Log enrichment, filter, and route service"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
homepage.workspace     = true
publish.workspace      = true

[lib]
name = "velocity_log_processor"
path = "src/lib.rs"

[[bin]]
name = "velocity-log-processor"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
velocity-types     = { workspace = true }
tokio              = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
axum               = { workspace = true }
tower-http         = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
serde_yaml         = { workspace = true }
reqwest            = { workspace = true }
chrono             = { workspace = true }
subtle             = { workspace = true }
rand               = { workspace = true }
async-trait        = { workspace = true }
arc-swap           = { workspace = true }
tower              = { workspace = true }

[dev-dependencies]
tokio       = { workspace = true, features = ["test-util", "macros"] }
