[package]
name        = "velocity-operator"
description = "kube-rs operators that reconcile Velocity CRDs"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
homepage.workspace     = true
publish.workspace      = true

[[bin]]
name = "velocity-operator"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
velocity-types = { workspace = true }
tokio          = { workspace = true }
anyhow         = { workspace = true }
tracing        = { workspace = true }
tracing-subscriber = { workspace = true }
