[package]
name        = "velocity-operator"
description = "kube-rs operators that reconcile Velocity CRDs"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
homepage.workspace     = true
publish.workspace      = true

[[bin]]
name = "velocity-operator"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
velocity-types     = { workspace = true }
velocity-typesense = { workspace = true }

tokio              = { workspace = true }
futures            = { workspace = true }
async-trait        = { workspace = true }

anyhow             = { workspace = true }
thiserror          = { workspace = true }

tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

kube               = { workspace = true }
k8s-openapi        = { workspace = true }
schemars           = { workspace = true }

sqlx               = { workspace = true }

axum               = { workspace = true }
tower              = { workspace = true }

serde              = { workspace = true }
serde_json         = { workspace = true }

dashmap            = { workspace = true }
sha2               = { workspace = true }
chrono             = { workspace = true }
uuid               = { workspace = true }
arc-swap           = { workspace = true }
redis              = { workspace = true }
prometheus         = { workspace = true }

# Warm-tier export (Phase 4.2) — write Parquet objects to object_store.
arrow              = { workspace = true }
parquet            = { workspace = true, features = ["async", "object_store"] }
object_store       = { workspace = true }
url                = { workspace = true }

# Pinned only to call CryptoProvider::install_default() at startup. kube-rs
# (via rustls-tls) pulls rustls 0.23 in but doesn't pick a provider for us.
rustls             = { version = "0.23", features = ["aws-lc-rs"] }

[dev-dependencies]
tokio    = { workspace = true, features = ["test-util", "macros"] }
uuid     = { workspace = true }
sqlx     = { workspace = true }
tempfile = "3"
