[package]
name        = "velocity-typesense"
description = "Shared Typesense HTTP client + collection spec helpers for Velocity"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
homepage.workspace     = true
publish.workspace      = true

[lints]
workspace = true

[dependencies]
velocity-types = { workspace = true }

chrono     = { workspace = true }
reqwest    = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
sha2       = { workspace = true }
thiserror  = { workspace = true }
tokio      = { workspace = true }
tracing    = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
axum  = { workspace = true }
