[package]
name        = "velocity-webhook"
description = "ValidatingWebhook server for Velocity CRDs"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
homepage.workspace     = true
publish.workspace      = true

[[bin]]
name = "velocity-webhook"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
velocity-types     = { workspace = true }

tokio              = { workspace = true }
anyhow             = { workspace = true }
thiserror          = { workspace = true }

tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

axum               = { workspace = true }
axum-server        = { version = "0.7", features = ["tls-rustls"] }
tower              = { workspace = true }

serde              = { workspace = true }
serde_json         = { workspace = true }

k8s-openapi        = { workspace = true }
kube               = { workspace = true, features = ["admission"] }

cel-interpreter    = { workspace = true }

# Pinned only to call CryptoProvider::install_default() at startup. axum-server's
# tls-rustls feature pulls rustls 0.23 in but doesn't pick a provider for us.
rustls             = { version = "0.23", features = ["aws-lc-rs"] }
